# zjudo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  devlog.txt
.forgejo/workflows/: source-release.yml
scripts/: init
src/: error.rs  lib.rs  main.rs  types.rs
src/boot/: assembler.rs  mod.rs  trampoline.rs
src/cli/: args.rs  commands.rs  mod.rs
src/elf/: mod.rs  parser.rs  types.rs
src/font/: mod.rs
src/module/: dependency.rs  loader.rs  metadata.rs  mod.rs
src/system/: bootdev.rs  kexec.rs  memory.rs  mod.rs  smp.rs  sysinfo.rs
src/tests/: integration.rs  mod.rs
src/zfs/: mod.rs
